src/patternfly/components/MenuToggle/menu-toggle.scss
/* ... */
// - Menu toggle split button
.#{$menu-toggle}.pf-m-split-button {
  --#{$menu-toggle}--Gap: 0;
  --#{$menu-toggle}--m-split-button--child--BorderInlineStartColor: var(--#{$menu-toggle}--BorderColor);

  padding: 0; // pass padding to children

  > * {
    position: relative;
    padding-block-start: var(--#{$menu-toggle}--PaddingBlockStart);
    padding-block-end: var(--#{$menu-toggle}--PaddingBlockEnd);
    padding-inline-start: var(--#{$menu-toggle}--PaddingInlineStart);
    padding-inline-end: var(--#{$menu-toggle}--PaddingInlineEnd);
  }

  > :first-child {
    border-start-start-radius: var(--#{$menu-toggle}--BorderRadius);
    border-end-start-radius: var(--#{$menu-toggle}--BorderRadius);
  }

  > :last-child {
    border-start-end-radius: var(--#{$menu-toggle}--BorderRadius);
    border-end-end-radius: var(--#{$menu-toggle}--BorderRadius);
  }

  > .#{$check} {
    --#{$check}__label--Color: currentcolor;
    --#{$check}__label--disabled--Color: currentcolor;

    align-items: center;
    align-self: stretch;

    .#{$check}__input {
      --#{$check}__input--TranslateY: 0;

      align-self: center;
    }
  }

  // all subsequent buttons
  > :not(:first-child) {
    border-inline-start: var(--#{$menu-toggle}--m-split-button--child--BorderInlineStartWidth) solid var(--#{$menu-toggle}--m-split-button--child--BorderInlineStartColor);
  }

  // Split button, primary
  &.pf-m-primary {
    --#{$menu-toggle}--m-split-button--child--BorderInlineStartColor: var(--#{$menu-toggle}--m-split-button--m-primary--child--BorderInlineStartColor);

    // stylelint-disable max-nesting-depth, selector-max-class, selector-not-notation
    > .#{$menu-toggle}__button,
    > .#{$check} {
      background-color: var(--#{$menu-toggle}--m-split-button--m-primary--child--BackgroundColor);

      &:is(:hover, :focus) {
        --#{$menu-toggle}--m-split-button--m-primary--child--BackgroundColor: var(--#{$menu-toggle}--m-split-button--m-primary--child--hover--BackgroundColor);
      }
    }

    &.pf-m-expanded {
      --#{$menu-toggle}--m-split-button--m-primary--child--BackgroundColor: var(--#{$menu-toggle}--m-split-button--m-primary--expanded--child--BackgroundColor);
    }
    // stylelint-enable
  }

  // Split button, secondary
  &.pf-m-secondary {
    --#{$menu-toggle}--m-split-button--child--BorderInlineStartColor: var(--#{$menu-toggle}--m-split-button--m-secondary--child--BorderInlineStartColor);
  }

  &.pf-m-primary,
  &.pf-m-secondary {
    // Reduce the padding before/after the border unless it's an icon/check-only element
    .#{$menu-toggle}__button:not(:has(.#{$menu-toggle}__toggle-icon:only-child)),
    .#{$check}:not(.pf-m-standalone) {
      &:first-child {
        padding-inline-end: var(--#{$menu-toggle}--m-split-button--pill--child--PaddingInlineEnd--offset);
      }

      &:last-child {
        padding-inline-start: var(--#{$menu-toggle}--m-split-button--pill--child--PaddingInlineStart--offset);
      }
    }
  }

  // disable accent border
  &:is(.pf-m-disabled, :disabled) {
    --#{$menu-toggle}--m-split-button--child--BorderInlineStartColor: var(--#{$menu-toggle}--m-split-button--child--disabled--BorderInlineStartColor);

    > .#{$menu-toggle}__button,
    > .#{$check} {
      color: var(--#{$menu-toggle}--m-split-button--child--disabled--Color);
      background-color: var(--#{$menu-toggle}--m-split-button--child--disabled--BackgroundColor);
    }

    &::before {
      content: none;
    }
  }

}

// - Menu toggle typeahead
.#{$menu-toggle}.pf-m-typeahead {
  --#{$menu-toggle}__button--AlignSelf: var(--#{$menu-toggle}--m-typeahead__button--AlignSelf);
  --#{$menu-toggle}--Gap: 0;

  align-items: stretch;
  padding: 0;

  .#{$menu-toggle}__button {
    --#{$menu-toggle}__button--PaddingInlineEnd: 0;
  }

  .#{$menu-toggle}__controls {
    --#{$menu-toggle}__button--PaddingInlineEnd: 0;

    display: flex;
    align-items: stretch;
  }

  .#{$text-input-group} {
    --#{$text-input-group}__utilities--MarginInlineEnd: 0;

    flex: 1;
  }
}

// - Menu toggle button
.#{$menu-toggle}__button {
  gap: var(--#{$menu-toggle}__button--Gap);
  align-self: var(--#{$menu-toggle}__button--AlignSelf);
  min-width: var(--#{$menu-toggle}__button--MinWidth);
  padding-inline-start: var(--#{$menu-toggle}__button--PaddingInlineStart);
  padding-inline-end: var(--#{$menu-toggle}__button--PaddingInlineEnd);
  color: inherit;
  background-color: var(--#{$menu-toggle}__button--BackgroundColor);
  border: 0;

  &.pf-m-text {
    display: inline-flex;
    align-items: baseline;
  }

  @at-root .#{$menu-toggle}.pf-m-split-button > .#{$check}.pf-m-standalone,
  &:has(> .#{$menu-toggle}__controls:only-child) {
    padding-inline-start: var(--#{$menu-toggle}__button--toggle-icon--PaddingInlineStart);
    padding-inline-end: var(--#{$menu-toggle}__button--toggle-icon--PaddingInlineEnd);
  }
}

.#{$menu-toggle}__text {
  @include pf-v6-text-overflow;

  min-width: 0;
}

.#{$menu-toggle}__count {
  display: flex;
  flex-wrap: nowrap;
}

// - Menu toggle controls - Menu toggle icon
.#{$menu-toggle}__controls,
.#{$menu-toggle}__toggle-icon {
  display: flex;
  align-items: center;
  justify-content: center;
}

.#{$menu-toggle}__icon {
  flex-shrink: 0;

  &.pf-m-avatar {
    .#{$avatar},
    img,
    svg {
      margin-block-start: calc(var(--#{$menu-toggle}--PaddingBlockStart) * -1);
      margin-block-end: calc(var(--#{$menu-toggle}--PaddingBlockEnd) * -1);
    }
  }
}

// - Menu toggle controls
.#{$menu-toggle}__controls {
  gap: var(--#{$menu-toggle}__controls--Gap);
  margin-inline-start: auto; // TODO: possibly replace as part of one of the other TODOs at top of file
}

// - Menu toggle icon
.#{$menu-toggle}__toggle-icon {
  min-height: var(--#{$menu-toggle}__toggle-icon--MinHeight);
  color: var(--#{$menu-toggle}__toggle-icon--Color, inherit);
}

// - Menu toggle status icon
.#{$menu-toggle}__status-icon {
  color: var(--#{$menu-toggle}__status-icon--Color, inherit);
}

